mudança na ligaçao  do banco

--- a/backend/backend-spring/src/main/resources/application.properties
+++ b/backend/backend-spring/src/main/resources/application.properties
@@ -1,15 +1,13 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.defer-datasource-initialization=true
-spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://bdresultlte.postgresql.dbaas.com.br:5432/bdresultlte
+spring.datasource.username=bdresultlte
+spring.datasource.password=zZCH%4Uiu
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.show-sql=true
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.validator.apply_to_ddl=false
-#spring.jpa.properties.hibernate.check_nullability=true
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+
+
 
 
 #SWAGGER
